# AtomHIC

./: CMakeLists.txt  README.md
Generic/: CMakeLists.txt  README.md
Generic/cmake/: AtomHicBuild.cmake  AtomHicDependencies.cmake
Generic/data/Crystals/: .Forsterite.dat.swp  CMakeLists.txt
Generic/data/Masses/: Masses.txt
Generic/doc/: CMakeLists.txt  doxygen.cfg.in
Generic/src/: .ComputeAuxiliary.cpp.swp  AtomicSystem.cpp  AtomicSystem.h  Bicrystal.cpp  Bicrystal.h  ComputeAuxiliary.cpp  ComputeAuxiliary.h  Crystal.cpp  Crystal.h  MathTools.cpp  MathTools.h  MyStructs.h  OrthorhombicCrystal.cpp  OrthorhombicCrystal.h
Generic/tools/: CMakeLists.txt
Generic/tools/AnalyzeBicrystal/: .main.cpp.swp  main.cpp  test.xsf
Generic/tools/AnalyzeBicrystal_ARGS/: main.cpp  test.lmp
Generic/tools/CreateCrystal/: .main.cpp.swp  main.cpp
Generic/tools/OrderParam/: CMakeLists.txt  main.cpp
data/: CMakeLists.txt
data/Crystals/: Al.ath  Bridgmanite.ath  Copper.ath  Enstatite.ath  Forsterite.ath  ForsteritePedonne.ath  Forsterite_DNS_Mg2SiO4.ath  Forsterite_DNS_SiO4.ath  Gold.ath  Ice.ath  Ice_CG.ath  KappaAlumine.ath  Magnesium.ath  Ringwoodite.ath  Silicon.ath  Topaze.ath  Tungsten.ath  Wadsleyite.ath  Zr.ath
data/ExampleFiles/: Crystal.ath  DescriptorProperties.ath  Tool.cpp  Type2Element.ath
data/FixedParameters/: CMakeLists.txt  FixedParameters.ath
data/MachineLearningModels/: CMakeLists.txt
data/Masses/: CMakeLists.txt  Masses.txt
data/Steinhardt/: CMakeLists.txt
data/Steinhardt/Alumine/: CMakeLists.txt
data/Steinhardt/Forsterite/: .Perfect.swp  CMakeLists.txt  Perfect
data/Steinhardt/Periclase/: CMakeLists.txt
src/: ACEDescriptors.cpp  ACEDescriptors.h  AtomHicConfig.h.in  AtomicSystem.cpp  AtomicSystem.h  AtomicSystemTrajectory.cpp  AtomicSystemTrajectory.h  Bicrystal.cpp  Bicrystal.h  CMakeLists.txt  ComputeAuxiliary.cpp  ComputeAuxiliary.h  Crystal.cpp  Crystal.h  DBScan.cpp  DBScan.h  Descriptors.cpp  Descriptors.h  Displays.cpp  Displays.h  GMMTools.cpp  GMMTools.h  GaussianMixtureModel.cpp  GaussianMixtureModel.h  KMeans.cpp  KMeans.h  KMeansTools.cpp  KMeansTools.h  MachineLearningModel.cpp  MachineLearningModel.h  MathTools.cpp  MathTools.h  MyStructs.h  SteinhardtDescriptors.cpp  SteinhardtDescriptors.h
src/sh/: spherical_harmonics.cpp  spherical_harmonics.h
tests/: CMakeLists.txt
tests/AtomicStrain/: AtStrainRef.lmp  CMakeLists.txt  Ref_output.xsf  Sheared.lmp  ToAdd.cfg  main.cpp
tests/BondOriParam/: CMakeLists.txt  Ref_output.xsf  Type2Element.ath  dump.xsf  main.cpp
tests/CreateGBs/: CMakeLists.txt  Ref_GB1.lmp  Ref_GB2.lmp  main.cpp
tests/DBScanClustering/: CMakeLists.txt  Dump.cfg  Ref_output.cfg  main.cpp
tests/FitGMM/: CMakeLists.txt  main.cpp
tests/SGMA_Alumine/: CMakeLists.txt  Input.cfg  Ref_Output.cfg  Type2Element.ath  main.cpp
tests/Steinhardt/: CMakeLists.txt  Ref_output.xsf  dump.lmp  main.cpp
tools/: CMakeLists.txt
tools/AdjustStoichiometry/: CMakeLists.txt  main.cpp
tools/AnalyzeBicrystal/: CMakeLists.txt  main.cpp
tools/AnalyzeBicrystal_ARGS/: CMakeLists.txt
tools/AnalyzeBicrystal_AndAtomicStrain/: CMakeLists.txt  main.cpp
tools/AnalyzeCSL/: CMakeLists.txt  main.cpp
tools/AnalyzePolycrystal/: CMakeLists.txt  main.cpp
tools/AnalyzePolycrystal_TimeSerie/: CMakeLists.txt  MAIN  main.cpp
tools/AtomicStrain/: .main.cpp.swp  CMakeLists.txt  main.cpp
tools/Atomsk/: CMakeLists.txt  main.cpp
tools/BasicManips/: CMakeLists.txt  main.cpp
tools/BondOriParam/: CMakeLists.txt  main.cpp
tools/ClusterAnalysis/: CMakeLists.txt  main.cpp
tools/ComputeDescriptors/: CMakeLists.txt  main.cpp
tools/ComputeSteinhardtParams/: CMakeLists.txt  main.cpp
tools/ComputeStrainTensor_FromNum/: .main.cpp.swp  CMakeLists.txt  main.cpp
tools/Compute_D2Min/: .main.cpp.swp  CMakeLists.txt  main.cpp
tools/CreateCrystal/: CMakeLists.txt  main.cpp
tools/CreateFacetGB/: CMakeLists.txt  main.cpp
tools/CreateGB/: CMakeLists.txt  main.cpp
tools/CreateOrientedPlane/: CMakeLists.txt  main.cpp
tools/DBScanClustering/: CMakeLists.txt  main.cpp
tools/DisplayFixedParameters/: CMakeLists.txt  main.cpp
tools/FitAndSaveGMM/: CMakeLists.txt  main.cpp
tools/FitAndSaveKMeans/: CMakeLists.txt  main.cpp
tools/GMMClassification/: CMakeLists.txt  main.cpp
tools/GMMTest/: .main.cpp.swp  CMakeLists.txt  main.cpp
tools/GenerateYAML4ACE/: CMakeLists.txt  main.cpp
tools/GetSteinhardt/: CMakeLists.txt  main.cpp
tools/IdentifyGB/: main.cpp
tools/IdentifyGrains/: main.cpp
tools/InvertMatrix/: CMakeLists.txt  main.cpp
tools/KMeansClassification/: CMakeLists.txt  main.cpp
tools/MakeNeutralSurfaces/: .main.cpp.swp  CMakeLists.txt  main.cpp
tools/MyTools/: CMakeLists.txt
tools/NewAnalyzeBic/: .main.cpp.swp  CMakeLists.txt  main.cpp
tools/OrderParam/: CMakeLists.txt  main.cpp
tools/OrderParam_Steinhardt/: CMakeLists.txt  main.cpp
tools/PythonTools/: FitAndSaveGMM.py  GMM_FitAndClassify.py  PCA.py  PlotGMMModel_Matrix.py  PlotGMMModel_violin.py  PrintGMM_ATH_format.py
tools/PythonToolsGMM/: FitAndSaveGMM.py  PlotGMMModel_Matrix.py  PlotGMMModel_violin.py
tools/ReLabelGMM/: main.cpp
tools/SampleGBComplexionCSL/: CMakeLists.txt  main.cpp
tools/SampleGBComplexionDSC/: .main.cpp.swp  CMakeLists.txt  main.cpp
tools/SampleGBComplexionGammaSurface/: CMakeLists.txt  main.cpp
tools/SampleGBShiftDoF/: CMakeLists.txt  main.cpp
tools/SaveGaussianMixture_Steinhardt/: .main.cpp.swp  CMakeLists.txt  main.cpp
tools/SaveNonCSCrystalBondOriParam/: CMakeLists.txt  main.cpp
tools/SaveSteinhardtToDatabase/: CMakeLists.txt  main.cpp
tools/SaveSteinhardtToDatabase_Defect/: CMakeLists.txt  main.cpp
tools/SaveSteinhardtToDatabase_PerfectCrystal/: CMakeLists.txt  main.cpp
tools/SearchLinkedTetrahedra/: .main.cpp.swp  main.cpp
tools/StructuralAnalysis_Steinhardt/: .main.cpp.swp  CMakeLists.txt  main.cpp
tools/StructuralAnalysis_Steinhardt_GMM/: CMakeLists.txt  main.cpp
tools/compare/: CMakeLists.txt  compare.h  compareExact.cc  compareSum.cc  main.cc
tools/scripts/: AtomHic_test.sh  CMakeLists.txt
(+140 files in other folders)
