### CMakeLists.txt --- 
##
######################################################################
## 
### Commentary: Add directories containing database
## 
######################################################################

add_subdirectory(Crystals)
add_subdirectory(Masses)
add_subdirectory(Steinhardt)
add_subdirectory(FixedParameters)
add_subdirectory(MachineLearningModels)
