### CMakeLists.txt --- 
##
######################################################################
## 
### Commentary: Add directories containing main programs
## 
######################################################################

add_subdirectory(Steinhardt)
add_subdirectory(BondOriParam)
add_subdirectory(AtomicStrain)
add_subdirectory(FitGMM)
add_subdirectory(SGMA_Alumine)
