### CMakeLists.txt --- 
##
######################################################################
## 
### Commentary: Add directories containing main programs
## 
######################################################################

add_subdirectory(CreateCrystal)
add_subdirectory(AnalyzeBicrystal)
add_subdirectory(OrderParam)
