### CMakeLists.txt --- 
##
######################################################################
## 
### Commentary: Add directories containing database
## 
######################################################################

add_subdirectory(Forsterite)
#add_subdirectory(Forsterite_Pedonne)
add_subdirectory(Periclase)
